# trigrs

./: Cargo.toml  LICENSE  README.md
src/: drawing.rs  keys.rs  main.rs  model.rs  text.rs  update.rs  window.rs
