[package]
name = "trigrs"
version = "0.1.0"
edition = "2021"
authors = ["Tobias <sandalbanditten@tutanota.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/sandalbanditten/muzic"
description = """
A small program to calculate and visualize basic trigonometry.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18"
